fix: portfolio filter tags overlay too big

--- a/assets/scss/partials/components/_portfolio.scss
+++ b/assets/scss/partials/components/_portfolio.scss
@@ -243,7 +243,7 @@
 
 .portfolio-filter-tags {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   position: sticky;
   top: calc(3.25rem + 12px);
   z-index: 1;
@@ -367,8 +367,6 @@
     border-radius: 0 0.25rem 0.25rem 0;
     cursor: pointer;
     background: none;
-    height: 100%;
-    min-height: -webkit-fill-available;
     border: 0;
 
     @include color.themed() {
